--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1,
-    maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <title>Proxima Centauri</title>
-    <script type="text/javascript" src="js/phaser.js"></script>
+    <script src="js/phaser.js"></script>
+    <script src="js/battle.js"></script>
+    <script src="js/main.js"></script>
+
+
     <style>
       body {
         padding: 0px;
@@ -15,7 +17,5 @@
       </style>
   </head>
   <body>
-    <!-- include the main game file -->
-    <script src="js/main.js"></script>
   </body>
 </html>
